--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "dependencies": {
     "animated": "^0.2.0",
     "firebase": "^4.3.0",
+    "history": "^4.7.2",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-shallow-compare": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-dom-factories": "^1.0.1",
+    "react-picker": "^1.2.9",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-flux": "^1.0.0",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "1.0.11",
+    "react-select": "^1.0.0-rc.5",
+    "react-selectize": "^3.0.1",
     "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
