--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "animated": "^0.2.0",
     "firebase": "^4.3.0",
     "history": "^4.7.2",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-shallow-compare": "^15.6.0",
@@ -20,6 +21,7 @@
     "react-scripts": "1.0.11",
     "react-select": "^1.0.0-rc.5",
     "react-selectize": "^3.0.1",
+    "react-simple-maps": "^0.8.3",
     "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
